--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical"
+    android:background="@color/black"
+    >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/textViewCalculation"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Calculations"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:padding="20dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:id="@+id/editTextTextPersonName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Enter The Result"
+        android:background="@color/white"
+        android:textAlignment="center"
+        android:padding="30dp"/>
+
+    <TextView
+        android:id="@+id/textViewGeneratedOperation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Calculations"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:padding="50dp"
+        android:textAlignment="center"
+        />
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:gravity="center"
+        android:nestedScrollingEnabled="false">
+
+        <TableRow style="@style/TableRow">
+
+            <Button
+                android:id="@+id/button7"
+                style="@style/CalculatorButton"
+                android:text="7" />
+
+            <Button
+                android:id="@+id/button8"
+                style="@style/CalculatorButton"
+                android:text="8" />
+
+            <Button
+                android:id="@+id/button9"
+                style="@style/CalculatorButton"
+                android:text="9" />
+        </TableRow>
+
+        <TableRow style="@style/TableRow">
+
+            <Button
+                android:id="@+id/button4"
+                style="@style/CalculatorButton"
+                android:text="4" />
+
+            <Button
+                android:id="@+id/button5"
+                style="@style/CalculatorButton"
+                android:text="5" />
+
+            <Button
+                android:id="@+id/button6"
+                style="@style/CalculatorButton"
+                android:text="6" />
+        </TableRow>
+
+        <TableRow style="@style/TableRow">
+
+            <Button
+                android:id="@+id/button1"
+                style="@style/CalculatorButton"
+                android:text="1" />
+
+            <Button
+                android:id="@+id/button2"
+                style="@style/CalculatorButton"
+                android:text="2" />
+
+            <Button
+                android:id="@+id/button3"
+                style="@style/CalculatorButton"
+                android:text="3" />
+        </TableRow>
+
+        <TableRow style="@style/TableRow">
+
+            <Button
+                android:id="@+id/button0"
+                style="@style/CalculatorButton"
+                android:text="0" />
+
+            <Button
+                android:id="@+id/buttonDecimal"
+                style="@style/CalculatorButton"
+                android:text="." />
+
+            <Button
+                android:id="@+id/buttonDash"
+                style="@style/CalculatorButton"
+                android:text="-" />
+        </TableRow>
+
+        <TableRow style="@style/TableRow">
+
+            <Button
+                android:id="@+id/buttonClear"
+                style="@style/CalculatorButton"
+                android:text="Clear" />
+
+            <Button
+                android:id="@+id/buttonGenerate"
+                style="@style/CalculatorButton"
+                android:text="Generate" />
+
+            <Button
+                android:id="@+id/buttonQuit"
+                style="@style/CalculatorButton"
+                android:text="Quit" />
+        </TableRow>
+
+        <TableRow style="@style/TableRow">
+
+            <Button
+                android:id="@+id/buttonValidate"
+                style="@style/CalculatorButton"
+                android:text="="
+                android:layout_width="match_parent"/>
+
+            <Button
+                android:id="@+id/buttonShowAll"
+                style="@style/CalculatorButton"
+                android:text="Show All"
+                android:layout_width="match_parent"
+                />
+
+        </TableRow>
+
+    </TableLayout>
+</LinearLayout>
