--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,11 +19,11 @@
         android:padding="20dp"/>
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/editTextCalculation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="numberDecimal"
         android:text="Enter The Result"
         android:background="@color/white"
         android:textAlignment="center"
@@ -40,119 +40,114 @@
         android:textAlignment="center"
         />
 
-    <TableLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clickable="true"
-        android:gravity="center"
-        android:nestedScrollingEnabled="false">
+        android:orientation="vertical">
 
-        <TableRow style="@style/TableRow">
-
+        <LinearLayout style="@style/CalculatorRow">
             <Button
                 android:id="@+id/button7"
-                style="@style/CalculatorButton"
-                android:text="7" />
+                android:text="7"
+                style="@style/CalculatorButton"/>
 
             <Button
                 android:id="@+id/button8"
-                style="@style/CalculatorButton"
-                android:text="8" />
+                android:text="8"
+                style="@style/CalculatorButton"/>
 
             <Button
                 android:id="@+id/button9"
-                style="@style/CalculatorButton"
-                android:text="9" />
-        </TableRow>
+                android:text="9"
+                style="@style/CalculatorButton"/>
+        </LinearLayout>
 
-        <TableRow style="@style/TableRow">
-
+        <LinearLayout style="@style/CalculatorRow">
             <Button
                 android:id="@+id/button4"
-                style="@style/CalculatorButton"
-                android:text="4" />
+                android:text="4"
+                style="@style/CalculatorButton"/>
 
             <Button
                 android:id="@+id/button5"
-                style="@style/CalculatorButton"
-                android:text="5" />
+                android:text="5"
+                style="@style/CalculatorButton"/>
 
             <Button
                 android:id="@+id/button6"
-                style="@style/CalculatorButton"
-                android:text="6" />
-        </TableRow>
+                android:text="6"
+                style="@style/CalculatorButton"/>
+        </LinearLayout>
 
-        <TableRow style="@style/TableRow">
-
+        <LinearLayout style="@style/CalculatorRow">
             <Button
                 android:id="@+id/button1"
-                style="@style/CalculatorButton"
-                android:text="1" />
+                android:text="1"
+                style="@style/CalculatorButton"/>
 
             <Button
                 android:id="@+id/button2"
-                style="@style/CalculatorButton"
-                android:text="2" />
+                android:text="2"
+                style="@style/CalculatorButton"/>
 
             <Button
                 android:id="@+id/button3"
-                style="@style/CalculatorButton"
-                android:text="3" />
-        </TableRow>
+                android:text="3"
+                style="@style/CalculatorButton"/>
+        </LinearLayout>
 
-        <TableRow style="@style/TableRow">
-
+        <LinearLayout style="@style/CalculatorRow">
             <Button
                 android:id="@+id/button0"
-                style="@style/CalculatorButton"
-                android:text="0" />
+                android:text="0"
+                style="@style/CalculatorButton"/>
 
             <Button
                 android:id="@+id/buttonDecimal"
-                style="@style/CalculatorButton"
-                android:text="." />
+                android:text="."
+                style="@style/CalculatorButton"/>
 
             <Button
                 android:id="@+id/buttonDash"
-                style="@style/CalculatorButton"
-                android:text="-" />
-        </TableRow>
+                android:text="-"
+                style="@style/CalculatorButton"/>
+        </LinearLayout>
 
-        <TableRow style="@style/TableRow">
-
+        <LinearLayout style="@style/CalculatorRow">
             <Button
                 android:id="@+id/buttonClear"
-                style="@style/CalculatorButton"
-                android:text="Clear" />
+                android:text="Clear"
+                style="@style/CalculatorButton"/>
 
             <Button
                 android:id="@+id/buttonGenerate"
-                style="@style/CalculatorButton"
-                android:text="Generate" />
+                android:text="Generate"
+                style="@style/CalculatorButton"/>
 
             <Button
                 android:id="@+id/buttonQuit"
-                style="@style/CalculatorButton"
-                android:text="Quit" />
-        </TableRow>
+                android:text="Quit"
+                style="@style/CalculatorButton"/>
+        </LinearLayout>
 
-        <TableRow style="@style/TableRow">
-
+        <LinearLayout style="@style/CalculatorRow">
             <Button
                 android:id="@+id/buttonValidate"
-                style="@style/CalculatorButton"
                 android:text="="
-                android:layout_width="match_parent"/>
+                style="@style/CalculatorButton"/>
 
             <Button
                 android:id="@+id/buttonShowAll"
-                style="@style/CalculatorButton"
                 android:text="Show All"
-                android:layout_width="match_parent"
-                />
+                style="@style/CalculatorButton"/>
+        </LinearLayout>
 
-        </TableRow>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="40" />
+    </LinearLayout>
 
-    </TableLayout>
+
+
 </LinearLayout>
