--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,27 +15,31 @@
     </style>
 
 
-    <style name="TableRow">
-        <item name="android:gravity">center</item>
+    <style name="CalculatorRow">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">70dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:orientation">horizontal</item>
         <item name="android:paddingLeft">20dp</item>
         <item name="android:paddingRight">20dp</item>
-        <item name="android:clickable">true</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
     </style>
 
     <style name="CalculatorButton">
-        <item name="android:textSize">17sp</item>
-        <item name="android:layout_width">130dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginLeft">2dp</item>
-        <item name="android:layout_marginTop">2dp</item>
-        <item name="android:layout_marginRight">2dp</item>
-        <item name="android:layout_marginBottom">2dp</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginLeft">4dp</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:layout_marginRight">4dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textAlignment">center</item>
         <item name="android:background">@color/cyan</item>
         <item name="backgroundTint">@color/cyan</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:fontFamily">sans-serif-condensed-medium</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:padding">0dp</item>
     </style>
 
 </resources>
