--- a/app/src/main/res/layout/activity_showall.xml
+++ b/app/src/main/res/layout/activity_showall.xml
@@ -14,7 +14,8 @@
             android:id="@+id/textViewShowAllGeneratedOperations"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textSize="20dp"/>
     </LinearLayout>
 
     <Button
